CSS JIT: Fix build error raised when CSS_SELECTOR_JIT_DEBUGGING is 1 https://bugs.webkit.org/show_bug.cgi?id=133266

Patch by Yusuke Suzuki <utatane.tea@gmail.com> on 2014-05-26
Reviewed by Benjamin Poulain.

When CSS_SELECTOR_JIT_DEBUGGING is 1, build erros occur on x86_64.

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::generatePrologue):
(WebCore::SelectorCompiler::SelectorCodeGenerator::generateEpilogue):

Canonical link: https://commits.webkit.org/151320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169363 268f45cc-cd09-0410-ab3c-d52691b4dbfc